[gd_scene load_steps=15 format=3 uid="uid://bau1ce6c6wvu6"]

[ext_resource type="PackedScene" uid="uid://vy6xu767jks6" path="res://src/Projectiles/Projectile.tscn" id="1_gw12d"]
[ext_resource type="Shader" path="res://src/Projectiles/Slice.gdshader" id="2_pg3d8"]
[ext_resource type="Script" path="res://src/Projectiles/Cherry/Cherry.gd" id="2_r0xsc"]
[ext_resource type="Texture2D" uid="uid://52lxpnvb0bq" path="res://assets/fruits/Cherry-black.png" id="3_posar"]
[ext_resource type="AudioStream" uid="uid://b137kr1okyyvt" path="res://assets/sound/pineaple_explosion.mp3" id="5_xkhct"]

[sub_resource type="CircleShape2D" id="CircleShape2D_37mfg"]
radius = 25.318

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uk32d"]
resource_local_to_scene = true
shader = ExtResource("2_pg3d8")
shader_parameter/cut_start = Vector2(0.5, 0)
shader_parameter/cut_end = Vector2(0.5, 2)
shader_parameter/which_side = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jk681"]
shader = ExtResource("2_pg3d8")
shader_parameter/cut_start = Vector2(0.5, 0)
shader_parameter/cut_end = Vector2(0.5, 1)
shader_parameter/which_side = -1.0

[sub_resource type="Animation" id="Animation_md7eo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_q7ysv"]
resource_name = "detonating"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.713726, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kmy80"]
_data = {
"RESET": SubResource("Animation_md7eo"),
"detonating": SubResource("Animation_q7ysv")
}

[sub_resource type="Curve" id="Curve_672nd"]
_data = [Vector2(0.572289, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_y5x5y"]
curve = SubResource("Curve_672nd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tyylx"]
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 300.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -27.37
linear_accel_max = -10.53
damping_min = 64.21
damping_max = 93.68
angle_min = -229.3
angle_max = 164.8
scale_min = 9.0
scale_max = 10.0
scale_curve = SubResource("CurveTexture_y5x5y")

[node name="Cherry" instance=ExtResource("1_gw12d")]
script = ExtResource("2_r0xsc")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_37mfg")

[node name="Sprite2D" parent="." index="1"]
scale = Vector2(3, 3)
texture = ExtResource("3_posar")

[node name="DeathParticles" parent="." index="5"]
modulate = Color(0.835294, 0.117647, 0.352941, 1)

[node name="SplitPieces" parent="." index="8"]
visible = false

[node name="LeftPiece" parent="SplitPieces" index="0"]
material = SubResource("ShaderMaterial_uk32d")
scale = Vector2(3, 3)
texture = ExtResource("3_posar")

[node name="RightPiece" parent="SplitPieces" index="1"]
material = SubResource("ShaderMaterial_jk681")
scale = Vector2(3, 3)
texture = ExtResource("3_posar")

[node name="DetonateAnimationPlayer" type="AnimationPlayer" parent="." index="10"]
libraries = {
"": SubResource("AnimationLibrary_kmy80")
}

[node name="ExplosionParticles" type="GPUParticles2D" parent="." index="11"]
emitting = false
amount = 548
process_material = SubResource("ParticleProcessMaterial_tyylx")
lifetime = 0.8
one_shot = true
explosiveness = 1.0

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="." index="12"]
stream = ExtResource("5_xkhct")
volume_db = -10.306
pitch_scale = 0.9
